--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ include_directories("${INCLUDE_DIR}")
 
 add_library(Texture STATIC ${PROJECT_SOURCE_DIR}/lib/Texture.c)
 add_library(Ranking STATIC ${PROJECT_SOURCE_DIR}/lib/Ranking.c)
+add_library(Text STATIC ${PROJECT_SOURCE_DIR}/lib/Text.c)
 
 set(LIBRARIES
         Texture
