--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,6 @@ set(CMAKE_C_EXTENSIONS OFF)
 
 project(prog2 C)
 
-set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wno-deprecated -std=c11")
 
 set(CMAKE_C_COMPILER /usr/bin/gcc)
@@ -16,11 +15,14 @@ include_directories("${INCLUDE_DIR}")
 add_library(Texture STATIC ${PROJECT_SOURCE_DIR}/lib/Texture.c)
 add_library(Ranking STATIC ${PROJECT_SOURCE_DIR}/lib/Ranking.c)
 add_library(Text STATIC ${PROJECT_SOURCE_DIR}/lib/Text.c)
+add_library(Timer STATIC ${PROJECT_SOURCE_DIR}/lib/Timer.c)
+
 
 set(LIBRARIES
         Texture
         Ranking
         Text
+        Timer
         png
         )
 
@@ -39,4 +41,4 @@ add_executable(main ${PROJECT_SOURCE_DIR}/src/main.c)
 target_link_libraries(main ${LIBRARIES})
 
 add_executable(test_ranking ${PROJECT_SOURCE_DIR}/test/ranking.c)
-target_link_libraries(test_ranking Ranking)
+target_link_libraries(test_ranking ${LIBRARIES})
